# group-feature-importance

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  environment.yaml  pyproject.toml
.github/workflows/: ci.yaml  nightly.yaml  publish.yaml
examples/: group_permutation_regression.ipynb
src/groufi/: __init__.py  group_permutation.py
tests/: __init__.py  test_group_permutation.py
