[tool.poetry]
name = "groufi"
version = "0.0.4a5"
description = "A small library to compute group feature importance"
readme = "README.md"
authors = ["Borealis AI"]
maintainers = ["Thibaut Durand <durand.tibo+gh@gmail.com>"]
homepage = "https://github.com/BorealisAI/group-feature-importance"
repository = "https://github.com/BorealisAI/group-feature-importance"
keywords = ["ML", "explainability", "sklearn", "feature importance"]
license = "Attribution-NonCommercial-ShareAlike 4.0 International"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Free for non-commercial use",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

packages = [
    { include = "groufi", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20"
pandas = ">=1,<3"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]
black = { extras = ["jupyter"], version = "^24.1" }
coverage = { extras = ["toml"], version = "^7.4" }
docformatter = "^1.5"
flake8 = "^5.0"
flake8-black = "^0.3"
flake8-bugbear = "^23.3"
isort = "^5.10"
pre-commit = "^3.3"
pylint = "^3.0"
pytest = "^7.3"
pytest-cov = "^4.0"
pytest-timeout = "^2.1"
seaborn = "^0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["groufi"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
testpaths = "tests/"
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
addopts = "--color yes --durations 10 -rf"
# Configuration of the short test summary info https://docs.pytest.org/en/stable/usage.html#detailed-summary-report

[tool.black]
line-length = 100
target-version = ["py38", "py39"]
include = '\.pyi?$'

[tool.pylint.FORMAT]
max-line-length = 100

[tool.isort]
profile = "black"
